--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ baseurl: ""
 
 # List of links in the navigation bar
 navbar-links:
+  Visualizations: "visualizations"
   About Me: "aboutme"
 
 # Image to show in the navigation bar - image must be a square (width = height)
